# python-starter-project

./: .gitignore  Dockerfile  Makefile  README.md  cookiecutter.json  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
tests/: test_main.py  test_python_starter_project.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/tests/: test_main.py
{{cookiecutter.project_name}}/{{cookiecutter.package_dir}}/: main.py
