[project]
name = "python-starter-project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # "pydantic == 1.10.4",
]

[project.optional-dependencies]
test = [
    "pytest == 7.2.1",
    "coverage == 7.1.0 ",
]
dev = [
    "ruff == 0.0.251",
    "black == 23.1.0",
]

# Formatting and Linting
[tool.ruff]
ignore = ["E501"] # Never enforce `E501` (line length violations).
select = ["E", "F", "I"] # Enable Pyflakes, isort

# Testing
[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
