[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = "{{cookiecutter.python_version}}"

dependencies = [
    # "pydantic == 1.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest == 7.2.0",
    "coverage == 7.0.5",
    "ruff == 0.0.182",
    "black == 22.12.0",
    "isort == 5.11.2",
]

# Formatting and Linting
[tool.ruff]
ignore = ["E501"]

[tool.isort]
profile = "black"

# Testing
[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
